--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+#Ignorerer bild-mappen, men inkluderer alligevel main.pdf, hvis sådan en nu skulle være i mappen
 build/*
 !build/main.pdf
+
+# Fjerner hjælpefiler
+*.aux
+*.fdb_latexmk
+*.fls
+*.log
+*.synctex.gz
+*.tex
